--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     env_file:
       - ./backend/.env
     volumes:
-      - ./backend/response_cache.json:/app/response_cache.json
+      - ./backend/cache:/app/cache
     ports:
       - "8000:8000"
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000
